--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,17 +1,22 @@
 apply plugin: 'com.android.library'
 
 android {
-  compileSdkVersion 23
-  buildToolsVersion "23.0.1"
+  compileSdkVersion safeExtGet('compileSdkVersion', 28)
+//  buildToolsVersion "23.0.1"
   defaultConfig {
-    minSdkVersion 16
-    targetSdkVersion 22
-    versionCode 1
-    versionName "1.0"
+    minSdkVersion safeExtGet('minSdkVersion', 16)
+    targetSdkVersion safeExtGet('targetSdkVersion', 28)
+
+    versionCode 2
+    versionName "1.1"
     ndk {
       abiFilters "armeabi-v7a", "x86"
     }
   }
+}
+
+def safeExtGet(prop, fallback) {
+  rootProject.ext.has(prop) ? rootProject.ext.get(prop) : fallback
 }
 
 allprojects {
@@ -22,6 +27,7 @@ allprojects {
 }
 
 dependencies {
-  compile 'com.facebook.react:react-native:+'
-  compile files('libs/libammsdk.jar')
+  implementation 'com.facebook.react:react-native:+'
+  api 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:+'
+//   compile files('libs/libammsdk.jar')
 }
